@@ -32,6 +32,12 @@ if test "$withval" = yes; then
 	AC_MSG_RESULT(Updating KDC database with each request)
 	AC_DEFINE(KRBCONF_KDC_MODIFIES_KDB)
 fi
+dnl XXX This will go away soon. -- tlyu
+AC_ARG_ENABLE([athena],
+[  --enable-athena         build with MIT Project Athena configuration
+                           -- here meaning use temporary DES3 etype that
+                              includes 32-bit length codings],
+[AC_DEFINE(ATHENA_DES3_KLUDGE)],)
 dnl
 dnl
 KRB5_RUN_FLAGS
